PR/50821: David Binderman: remove "i <" i <